use a fixed time step and save solution at each step

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 env_logger = "0.11.5"
 fv = { git = "https://github.com/xgarnaud/fv.git", version = "0.1.0", default_features=false }
 log = "0.4.22"
+rayon = "1.10.0"
 serde = "1.0.216"
 serde_json = "1.0.133"
